Radio button groups are not scoped by shadow boundaries https://bugs.webkit.org/show_bug.cgi?id=199568

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

Rebaselined a test now that it passes.

* web-platform-tests/shadow-dom/input-type-radio-expected.txt:

Source/WebCore:

Fixed the bug that radio button groups are not scoped to each shadow tree by moving
RadioButtonGroups from FormController, which is a per-document object, to TreeScope.

Test: imported/w3c/web-platform-tests/shadow-dom/input-type-radio.html

* dom/RadioButtonGroups.h:
(WebCore::RadioButtonGroups): Made this bmalloc'ed now that it's allocated standalone.
* dom/TreeScope.cpp:
(WebCore::TreeScope::radioButtonGroups): Added.
* dom/TreeScope.h:
* html/FormController.h:
(WebCore::FormController::radioButtonGroups): Deleted.
* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::~HTMLInputElement):
(WebCore::HTMLInputElement::removedFromAncestor): Update the radio button group here.
(WebCore::HTMLInputElement::didMoveToNewDocument): Removed the code to update radio
button group here since it's done in removedFromAncestor now. Note that insertion case
is alrady taken care of by HTMLInputElement::didFinishInsertingNode.
(WebCore::HTMLInputElement::radioButtonGroups const): Ditto.


Canonical link: https://commits.webkit.org/216045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250708 268f45cc-cd09-0410-ab3c-d52691b4dbfc