Source/WebCore/dom/RadioButtonGroups.h
@@ -31,6 +31,7 @@ class HTMLInputElement;
 class RadioButtonGroup;
 
 class RadioButtonGroups {
+    WTF_MAKE_FAST_ALLOCATED;
 public:
     RadioButtonGroups();
     ~RadioButtonGroups();
