Source/WebCore/html/FormController.h
@@ -21,8 +21,8 @@
 
 #pragma once
 
-#include "RadioButtonGroups.h"
 #include <wtf/Forward.h>
+#include <wtf/HashMap.h>
 #include <wtf/ListHashSet.h>
 #include <wtf/Vector.h>
 #include <wtf/text/WTFString.h>
@@ -41,8 +41,6 @@ class FormController {
 public:
     FormController();
     ~FormController();
-
-    RadioButtonGroups& radioButtonGroups() { return m_radioButtonGroups; }
 
     void registerFormElementWithState(HTMLFormControlElementWithState&);
     void unregisterFormElementWithState(HTMLFormControlElementWithState&);
@@ -67,7 +65,6 @@ private:
     FormControlState takeStateForFormElement(const HTMLFormControlElementWithState&);
     static void formStatesFromStateVector(const Vector<String>&, SavedFormStateMap&);
 
-    RadioButtonGroups m_radioButtonGroups;
     FormElementListHashSet m_formElementsWithState;
     SavedFormStateMap m_savedFormStateMap;
     std::unique_ptr<FormKeyGenerator> m_formKeyGenerator;
